syntax = "proto3";

package systems.ajax.a911.grpc.v1.hub.main;

import "google/protobuf/timestamp.proto";
import "v1/hub/main/object_subtype.proto";

import "v1/hub/main/additional/data/action_source_object.proto";
import "v1/hub/main/additional/data/company_permissions_claim.proto";
import "v1/hub/main/additional/data/company_permissions_claim_response.proto";
import "v1/hub/main/additional/data/confirmed_alarm_info.proto";
import "v1/hub/main/additional/data/custom_alarm_type.proto";
import "v1/hub/main/additional/data/display_groups.proto";
import "v1/hub/main/additional/data/endpoint_info.proto";
import "v1/hub/main/additional/data/event_location.proto";
import "v1/hub/main/additional/data/firmware_info.proto";
import "v1/hub/main/additional/data/firmware_version.proto";
import "v1/hub/main/additional/data/hub_connection_info.proto";
import "v1/hub/main/additional/data/hub_alarm_info.proto";
import "v1/hub/main/additional/data/initiator_name.proto";
import "v1/hub/main/additional/data/initiator_info.proto";
import "v1/hub/main/additional/data/malfunction_info.proto";
import "v1/hub/main/additional/data/pro_permissions_claim.proto";
import "v1/hub/main/additional/data/pro_permissions_claim_response.proto";
import "v1/hub/main/additional/data/resource_description.proto";
import "v1/hub/main/additional/data/self_test_status.proto";
import "v1/hub/main/additional/data/slave_bus_id.proto";
import "v1/hub/main/additional/data/time_data.proto";
import "v1/hub/main/additional/data/string_data.proto";
import "v1/hub/main/additional/data/troubled_devices.proto";
import "v1/hub/main/additional/data/video_scenario.proto";
import "v1/hub/main/additional/data/video_archive_export_completed.proto";
import "v1/hub/main/additional/data/video_edge_info.proto";
import "v1/hub/main/additional/data/video_edge_channel_media_data_info.proto";

import "systems/ajax/logging/proto/log_marker.proto";
import "systems/ajax/logging/proto/formatting_options.proto";

option swift_prefix = "Systems";
option java_package = "systems.ajax.a911.grpc.v1.main";
option java_multiple_files = true;

message HubEvent {
  string id = 1; // may be empty if event comes from cache
  string hub_id = 2 [(log_marker) = LOG_MARKER_HUB_ID];
  string hub_name = 3;
  string source_id = 4;
  string source_name = 5;
  string code = 6;
  Type type = 7;
  string source_room_name = 8;
  string event_id = 9;
  google.protobuf.Timestamp server_received_timestamp = 10;
  string source_type = 11;
  string source_room_id = 12;
  AdditionalData additional_data = 13 [deprecated = true];
  string hub_sub_type = 14;
  HubConnectionInfo hub_connection_info = 15;
  repeated AdditionalDataV2 additional_data_v2 = 16;

  enum Type {
    ALARM = 0;
    ALARM_RECOVERED = 1;
    MALFUNCTION = 2;
    FUNCTION_RECOVERED = 3;
    SECURITY = 4;
    SMART_HOME_ACTUATOR = 5;
    USER = 6;
    LIFECYCLE = 7;
    FIBRA_SCAN_ALARM = 8;
    SYSTEM_EVENT = 9;
    SMART_HOME_ALARM = 10;
    SMART_HOME_EVENT = 11;
    SMART_HOME_MALFUNCTION = 12;
    SMART_HOME_ALARM_RESTORE = 13;
    ALARM_WARNING = 14;
    VIDEO_MOTION = 15;
    VIDEO_HUMAN = 16;
    VIDEO_PET = 17;
    VIDEO_VEHICLE = 18;
    VIDEO_SCENARIO_EXECUTED = 19;
    VIDEO_RING_BUTTON_PRESSED = 20;
  }

  message HubConnectionInfo {
    google.protobuf.Timestamp original_timestamp = 1; // in seconds
    HubConnectionStatus hub_connection_status = 2;

    enum HubConnectionStatus {
      HUB_CONNECTION_STATUS_UNSPECIFIED = 0;
      HUB_CONNECTION_STATUS_ONLINE = 1;
      HUB_CONNECTION_STATUS_OFFLINE = 2;
    }
  }

  message AdditionalDataV2 {
    oneof value {
      v1.hub.main.additional.data.ActionSourceObject action_source_object = 1;
      v1.hub.main.additional.data.CompanyPermissionsClaim company_permissions_claim = 2;
      v1.hub.main.additional.data.CompanyPermissionsClaimResponse company_permissions_claim_response = 3;
      v1.hub.main.additional.data.CustomAlarmTypeInfo custom_alarm_type_info = 4;
      v1.hub.main.additional.data.DisplayGroups display_groups = 5;
      v1.hub.main.additional.data.EndpointInfo endpoint_info = 6;
      v1.hub.main.additional.data.EventLocation event_location = 7;
      v1.hub.main.additional.data.FirmwareInfo firmware_info = 8;
      v1.hub.main.additional.data.FirmwareVersion firmware_version = 9;
      v1.hub.main.additional.data.HubConnectionInfo hub_connection_info = 10;
      v1.hub.main.additional.data.InitiatorName initiator_name = 11;
      v1.hub.main.additional.data.InitiatorInfo initiator_info = 12;
      v1.hub.main.additional.data.MalfunctionInfo malfunction_info = 13;
      v1.hub.main.additional.data.ProPermissionsClaim pro_permissions_claim = 14;
      v1.hub.main.additional.data.ProPermissionsClaimResponse pro_permissions_claim_response = 15;
      v1.hub.main.additional.data.ResourceDescription resource_description = 16;
      v1.hub.main.additional.data.SelfTestStatus self_test_status = 17;
      v1.hub.main.additional.data.SlaveBusId slave_bus_id = 18;
      v1.hub.main.additional.data.StringData string_data = 19;
      v1.hub.main.additional.data.TroubledDevices troubled_devices = 20;
      v1.hub.main.additional.data.VideoScenario video_scenario = 21;
      v1.hub.main.additional.data.VideoArchiveExportCompleted video_archive_export_completed = 22;
      v1.hub.main.additional.data.TimeData time_data = 23;
      v1.hub.main.additional.data.VideoEdgeInfo video_edge_info = 24;
      v1.hub.main.additional.data.ConfirmedAlarmInfo confirmed_alarm_info = 25;
      v1.hub.main.additional.data.HubAlarmInfo hub_alarm_info = 26;
      v1.hub.main.additional.data.VideoEdgeChannelMediaDataInfo video_edge_channel_media_data_info = 27;
    }
  }

  message AdditionalData {
    oneof test_oneof {
      AccessRequest access_request = 1;
      Coordinates coordinates = 2;
      DeviceMalfunctions device_malfunctions = 3;
      ResourceDescription resource_description = 4;
      FirmwareVersion firmware_version = 5;
      MalfunctionAdditionalData malfunction_additional_data = 6;
      Initiator initiator_additional_data = 7;
      ApprovePermissionsRequestPermanentlyAdditionalData approve_permissions_permanently_additional_data = 8;
      RejectPermissionsRequestAdditionalData reject_permissions_additional_data = 9;
      ApprovePermissionsRequestTemporaryAdditionalData approve_permissions_temporary_additional_data = 10;
      ClaimPermissionsRequestTemporaryAdditionalData claim_permissions_request_temporary_additional_data = 11;
      ClaimPermissionsRequestPermanentAdditionalData claim_permissions_request_permanent_additional_data = 12;
      InitiatorId initiator_id_additional_data = 13;
      VideoScenarioTriggeredAdditionalData video_scenario_triggered_additional_data = 14 [deprecated = true];
      InitiatorNameAndEndpointAdditionalData initiator_name_and_endpoint_additional_data = 15;
      TimezoneChangedAdditionalData timezone_changed_additional_data = 16;
      SlaveBusIdAdditionalData slave_bus_id_additional_data = 17;
      FirmwareIdInfo firmware_id_info = 18;
      SourceUserNameAndSlaveBusIdAdditionalData source_user_name_and_slave_bus_id_additional_data = 19;
      ActionSourceObjectAdditionalData action_source_object_additional_data = 20;
      SourceUserNameAndActionSourceObjectAdditionalData source_user_name_and_action_source_object_additional_data = 21;
      SelfTestStatusAdditionalData self_test_status_additional_data = 22;
      v1.hub.main.additional.data.VideoScenario video_scenario_additional_data = 23;
      v1.hub.main.additional.data.VideoArchiveExportCompleted video_archive_export_completed_additional_data = 24;
      TimeDataAdditionalData time_data_additional_data = 25;
      v1.hub.main.additional.data.VideoEdgeInfo video_edge_info = 26;
      ConfirmedAlarmInfoAdditionalData confirmed_alarm_info_additional_data = 27;
    }

    message TimezoneChangedAdditionalData {
      string new_timezone = 1;
    }

    message AccessRequest {
      uint64 request_id = 1;
      string pro_id = 2;
      string pro_name = 3 [(hash_value) = true];
      string pro_email = 4 [(hash_value) = true];
      string pro_company_id = 5;
      string owner_id = 6;
      string owner_name = 7 [(hash_value) = true];
      string owner_email = 8 [(hash_value) = true];
      AccessRights requested_access_rights = 9;
      uint32 access_time_hours = 10;

      enum AccessRights {
        FULL_ACCESS = 0;
      }
    }

    message Coordinates {
      double latitude = 1;
      double longitude = 2;
    }

    message DeviceMalfunctions {
      repeated DeviceMalfunction items = 1;
      reserved 2, 3;
      ObjectSubtype action_device_type = 4;
      optional string action_object_hex_id = 5;
      optional string action_object_name = 6;
      repeated Group groups = 7;

      message Group {
        // 8-character hex
        string group_id = 1;
        string group_name = 2;
      }

      message DeviceMalfunction {
        string obj_id = 1;
        string obj_type = 2;
        string obj_name = 3;
        string obj_room_id = 4;
        string obj_room_name = 5;
        string hub_name = 6;
        string text = 7;
      }
    }

    message ResourceDescription {
      repeated ResourceLink ordered_resource_links = 1;
      google.protobuf.Timestamp link_expiration_timestamp = 2;
      string source_user_name = 3;

      message ResourceLink {
        string url = 1;
        Status status = 2;

        enum Status {
          IN_PROGRESS = 0;
          READY = 1;
          FAILED = 2;
        }
      }
    }

    message FirmwareVersion {
      string version = 1;
    }

    message MalfunctionAdditionalData {
      DeviceMalfunctionInfo device_malfunction = 1;

      enum DeviceMalfunctionInfo {
        NO_MALFUNCTION_INFO = 0;
        CABLE_BREAK_ISSUE = 1;
        VOLTAGE_INSTABILITY = 2;
        SIREN_VOLUME_TEST_REQUIRED = 3;
        CO_SENSOR_MALFUNCTION = 4;
        CO_SENSOR_LEVEL_EXCEEDED = 5;
        SMOKE_DETECTOR_CAMERA_MALFUNCTION = 6;
        MICROWAVE_SENSOR_CALIBRATION_ERROR = 7;
        ACCELEROMETER_MALFUNCTION = 8;
        BAD_INPUT_RESISTANCE = 9;
        BAD_TEMPERATURE = 10;
        END_OF_LIFE = 11;
        HARDWARE_MALFUNCTION = 12;
        MODEM_MALFUNCTION = 27;
        WIFI_CONNECTION_FAIL = 28;
        BATTERY_MALFUNCTION = 29;
        BATTERY_CHARGE_ERROR = 30;
        SOFTWARE_MALFUNCTION = 31;
        FLASH_MALFUNCTION = 32;
      }
    }

    message Initiator {
      string initiator_name = 1 [(hash_value) = true];
    }

    message ApprovePermissionsRequestPermanentlyAdditionalData {
      string name = 1 [(hash_value) = true];
      string email = 2 [(hash_value) = true];
    }

    message RejectPermissionsRequestAdditionalData {
      string name = 1 [(hash_value) = true];
      string email = 2 [(hash_value) = true];
    }

    message ApprovePermissionsRequestTemporaryAdditionalData {
      string name = 1 [(hash_value) = true];
      string email = 2 [(hash_value) = true];
      int32 access_time_hours = 3;
    }

    message ClaimPermissionsRequestTemporaryAdditionalData {
      string claimID = 1;
      string emailCompany = 2;
      int32 access_time_hours = 3;
    }

    message ClaimPermissionsRequestPermanentAdditionalData {
      string claimID = 1;
      string emailCompany = 2;
    }

    message InitiatorId {
      string id = 1;
    }

    message VideoScenarioTriggeredAdditionalData {
      option deprecated = true;

      string scenario_name = 1;
      string alarm_id = 2;
      repeated ChannelGif channel_gifs = 3;

      message ChannelGif {
        string channel_guid = 1;
        string room_name = 2;
        repeated string frame_ids = 3;
        int32 frames_ready = 4;
        string channel_name = 5;
      }
    }

    message InitiatorNameAndEndpointAdditionalData {
      string initiator_user_name = 1 [(hash_value) = true];
      string endpoint_name = 2;
      // when initiator object is not user, e.g. scenario
      string initiator_object_name = 3;
    }

    message SlaveBusIdAdditionalData {
      int32 slave_bus_id = 1;
    }

    message TimeDataAdditionalData {
      int32 time_seconds_linux_epoch = 1;
    }

    message ConfirmedAlarmInfoAdditionalData {
      string parent_alarm_id = 1;
    }

    message FirmwareIdInfo{
      string fw_version = 1;
      ObjectSubtype object_subtype = 2;
      string device_hw_version = 3;
      int32 device_band = 4;
    }

    message SourceUserNameAndSlaveBusIdAdditionalData {
      string sourceUserName = 1;
      int32 slaveBusId = 2;
    }

    message ActionSourceObjectAdditionalData {
      ObjectSubtype device_type = 1;
      string hex_id = 2;
      string object_name = 3;
    }

    message SourceUserNameAndActionSourceObjectAdditionalData {
      ObjectSubtype device_type = 1;
      string hex_id = 2;
      string object_name = 3;
      string source_user_name = 4 [(hash_value) = true];
    }

    message SelfTestStatusAdditionalData {
      repeated DefectedSensorsInfo defected_sensors_infos = 3;

      enum DefectedSensorsInfo {
        DEFECTED_SENSORS_INFO_UNSPECIFIED = 0;
        DEFECTED_SENSORS_INFO_ACCELEROMETER = 1;
        DEFECTED_SENSORS_INFO_MAGNETOMETER = 2;
        DEFECTED_SENSORS_INFO_REED = 3;
        DEFECTED_SENSORS_INFO_PIR = 4;
        DEFECTED_SENSORS_INFO_MICROWAVE = 5;
        DEFECTED_SENSORS_INFO_MASKING = 6;
        DEFECTED_SENSORS_INFO_SEISMIC = 7;
      }
    }
  }
}
